fixed layout issue for notes-container element by discarding the bootstrap classes and writing custom CSS

--- a/dark.css
+++ b/dark.css
@@ -1,8 +1,8 @@
 :root{
     --dark:#000814;
-    --medium:#001d3d;
+    --medium:#00132d;
     --accent:#90e0ef;
-    --bodyTextColorWhite: #fafbfc;
+    --bodyTextColorWhite: #eff0f1;
 }
 
 
@@ -18,7 +18,6 @@ body.dark-mode h5,
 body.dark-mode h6,
 body.dark-mode p,
 body.dark-mode span,
-body.dark-mode button,
 body.dark-mode li
 {
     color: var(--bodyTextColorWhite)!important;
@@ -46,7 +45,7 @@ body.dark-mode .dark{
 	display: grid;
 	place-items: center;
 	cursor: pointer;
-	/* box-shadow: 0 0 50px 20px rgba(0, 0, 0, 0.1); */
+	box-shadow: 0 0 50px 20px rgba(0, 0, 0, 0.1);
 	line-height: 1;
   }
   
@@ -80,10 +79,24 @@ body.dark-mode .dark{
 }
 
 
-body.dark-mode .notes-container{
+body.dark-mode .notes-container,
+body.dark-mode .notes-section{
     background-color: var(--dark);
 }
 
+/*element that displays the alerts on the main page(does not display on the modals)  */
+body.dark-mode .main-alerts-display{
+	background: var(--bodyTextColorWhite)!important;
+}
+
+
+body.dark-mode .main-alerts-display p,
+body.dark-mode .main-alerts-display span{
+	color: #000 !important;
+}
+
+
+/**** PAGE LAYOUT/SECTIONS ****/
 body.dark-mode .notes-card,
 body.dark-mode header,
 body.dark-mode .cover-img-modal,
@@ -91,13 +104,76 @@ body.dark-mode .note-modal-center{
     background-color: var(--medium)!important;
 }
 
-body.dark-mode .notes-card{
-  border: 1px solid var(--accent);
-	border-right: 4px solid var(--border-color);
-	border-bottom: 4px solid var(--accent);
-	box-shadow: 1px 1px 0px 1px rgba(0,0,0,1);
-	-webkit-box-shadow: 1px 1px 0px 1px rgba(0,0,0,1);
-	-moz-box-shadow: 1px 1px 0px 1px rgba(0,0,0,1);
+body.dark-mode .size-4{
+	color: var(--accent)!important;	
 }
+
+/**** NOTE CARD SECTION ****/
+body.dark-mode .notes-card{
+  border: 1px solid #000;
+}
+
+body.dark-mode .notes-card button{
+	color: var(--bodyTextColorWhite);
+}
+
+body.dark-mode .card-head-wrapper{
+  border: none;
+  background-color: var(--medium);
+}
+
+/**** FORM INPUT SECTION ****/
+/* the note title text input */
+body.dark-mode .title-input,
+body.dark-mode .note-input{
+	background-color: var(--dark);
+	color: var(--bodyTextColorWhite);
+	border: 1px solid var(--accent) !important;
+}
+
+
+/* focus state for the input and textarea elements */
+body.dark-mode .title-input:focus,
+body.dark-mode .note-input:focus{
+	background-color: var(--bodyTextColorWhite);
+	color: #000;
+}
+
+/* the note text area */
+body.dark-mode .title-input{
+  margin-bottom: .5rem !important;
+}
+
+
+/**** BUTTONS ****/
+body.dark-mode .show-inputs-btn i{
+	color: var(--medium) !important;
+}
+
+body.dark-mode .add-cover-img-btn{
+	color: var(--accent);
+}
+
+body.dark-mode .app-btns,
+body.dark-mode .show-inputs-btn{
+  border: 3px solid var(--medium);
+  color: var(--medium) !important;
+  background: var(--accent) !important;
+
+}
+
+body.dark-mode .app-btns:active{
+	background: linear-gradient(45deg,rgb(255, 47, 0) 50%,rgb(238, 132, 19))!important;
+	color: var(--medium) !important;
+  }
+
+body.dark-mode .app-btns:hover{
+  background-color: var(--bodyTextColorWhite) !important;
+  color: var(--medium) !important;
+}
+
+
+
+
 
 
