--- a/style.css
+++ b/style.css
@@ -68,6 +68,10 @@
 
 
 /*****Utility Classes******/
+.test-class{
+	border: 1px solid purple;
+}
+
 .light-txt{
 	color: var(--light-text) !important;
 	font-size: 85%;
@@ -129,6 +133,10 @@ label{
 	font-family: var(--heading-font),sans-serif;
 }
 
+.card-text{
+	font-weight: 400 !important;
+}
+
 .card-subtitle{
 	font-weight: 600;
 }
@@ -175,6 +183,8 @@ header{
 .main-alerts-display{
 	width: 0;
 	height: 23px;
+	background: var(--border-color);
+	color: var(--body-bg);
 	font-family: var(--heading-font);
 	text-align: center;
 	border-radius:5px;
@@ -188,9 +198,21 @@ header{
 	transition: all 400ms 400ms linear;
   }
 
-.main-alerts-display > p{
+.main-alerts-display  p{
 	padding: 0;
+	width: 0;
+	margin: 0 auto;
   }
+
+  /* Alerts styles for photo modal */
+.alerts{
+	visibility: hidden;
+	background-color: transparent;
+	color: red !important;
+	transform: translateY(-1px) !important;
+	height: 27px;
+	transition: all 300ms linear;
+}
 
 /* main area of the form that holds all input elements */
 section.form-center {
@@ -207,9 +229,16 @@ section.form-center {
 	-webkit-box-shadow: 1px 1px 0px 1px rgba(0,0,0,1);
 	-moz-box-shadow: 1px 1px 0px 1px rgba(0,0,0,1);
 	font-weight: 800;
+	padding: 5px 10px;
 	background: linear-gradient(90deg,rgb(255, 234, 0) 45%,rgb(255, 255, 0));
 	border-radius: 0%;
 	transition: all 300ms ease-in-out;
+}
+
+/* click effect styling on the btns */
+.app-btns:active{
+	color: #000;
+	background:#fff;
 }
 
 /* hover effect styling on the btns */
@@ -218,6 +247,8 @@ section.form-center {
 	background: #000;
 
 }
+
+
 
 /* style for btn that displays the input field when clicked */
 button.show-inputs-btn{
@@ -255,15 +286,11 @@ button.show-inputs-btn{
 }
 
 
-/*create note btn  */
-.create-note-btn{
-	visibility: hidden;
-	transition: visibility 400ms linear;
-}
-
 /* clear notes btn */
 .clear-btn{
-	background: linear-gradient(45deg,rgb(255, 47, 0) 50%,rgb(238, 132, 19));
+	background: linear-gradient(
+	45deg,rgb(255, 47, 0) 50%,
+	rgb(238, 132, 19));
 	color: var(--body-bg);
 	display:none;
 }
@@ -284,7 +311,7 @@ button.show-inputs-btn{
 	left: 0;
 	right: 0;
 	visibility: hidden;
-	z-index: -100;
+	z-index: -1000;
 	
 }
 
@@ -369,13 +396,7 @@ img.cover-img{
 	border-radius: 4px;
 }
 
-/* Alerts styles for photo modal */
-.alerts{
-	visibility: hidden;
-	transform: translateY(-1px) !important;
-	height: 27px;
-	transition: all 300ms linear;
-}
+
 
 /**** INPUT BOX FOR NOTE TITLE AND NOTE ****/
 /* class that controls the sizing on the text area element */
@@ -409,21 +430,28 @@ img.cover-img{
 }
 
 /**** NOTE CARD STYLES ****/
+.notes-section{
+	position: relative;
+	z-index: 5;
+	background-color: var(--notes-container-color);
+}
+
 /* wrapper element that contains the card element */
 .notes-container{
 	display: flex;
+	width: 100%;
 	justify-content: center;
+	align-items: center;
+	gap: 1.5em;
 	flex-direction: column;
 	flex-wrap: wrap;
 	background-color: var(--notes-container-color);
-	position: relative;
-	z-index: 20;
 }
 
 /* card element */
 .notes-card{
 	min-height: 175px;
-	width: 90%;
+	width: 100%;
 	padding: 0;
 	border-radius: 0%;
 	border: 1px solid var(--border-color);
@@ -435,15 +463,14 @@ img.cover-img{
 	cursor: pointer;
 	transition: transform 300ms linear !important;
 }
+
 /* flex container for the card text and card image */
 .note-card-center{
 	display:flex;
+	width: 100%;
 	flex-direction: column;
 }
 
-.card-text{
-	font-weight: 400;
-}
 
 /** hover effect for note cards **/
 /* note btn that have arrow icons */
@@ -530,11 +557,6 @@ img.cover-img{
 		max-height: 624px;
 	}
 
-	/*wrapper element for the text section of the note display */
-	.note-txt{
-		height: 250px;
-	}
-
 
 	/* for alerts on main page */
 	.main-alerts-display{
@@ -542,37 +564,30 @@ img.cover-img{
 		margin: 0 auto;
 	}
 
-/** contorls the with and orientation of the note cards **/
+/** contorls the width and orientation of the note cards **/
 	.notes-container{
-		display: flex;
 		justify-content: space-between;
 		flex-direction: column;
-	}
-
-	/* note card elements */
-	.notes-card{
-		width: 100%;
+		gap: 1em;
 	}
 
 	/* flex container for the card text and card image */
 	.note-card-center{
 		flex-direction: row;
-		width: 100%;
+		height: 100%;
 		padding-bottom: 0;
 	}
 
 	/* wrapper for the image section of the card*/
 	.note-card-center .card-head-wrapper{
 		width: 35%;
-		height: 100% !important;
-		/* border: 1px solid red; */
+		height: 175px !important;
 	}
 
 	/*wapper for the text section of the card  */
 	.note-card-center .card-body-wrappper{
 		width: 65%;
-		height: 100% !important;
-		/* border: 1px solid white; */
+		height: 175px !important;
 	}
 
 	/* hover effect for note cards */
@@ -585,7 +600,6 @@ img.cover-img{
 	
 }
 
-
 /** large and X-large screens size **/
 @media screen and (min-width: 992px) {
 	/* modal box for adding cover img */
@@ -593,9 +607,9 @@ img.cover-img{
 		width: 450px;
 	}
 }
-
+/** contorls the width and orientation of the note cards **/
 @media screen and (min-width: 990px) {
-	/** contorls the with and orientation of the note cards **/
+
 	.notes-container{
 		flex-direction: row;
 	}
@@ -625,6 +639,10 @@ the note title and note input itself */
 .show-main-alert {
 	z-index: 10;
 	visibility: visible;
+	width: 50%;
+  }
+
+  .show-main-alert  p{
 	width: 50%;
   }
 
